@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-07T00:23:24Z",
+  "timestamp" : "2022-06-07T08:12:31Z",
   "count_outdated" : 1546,
   "uniques_outdated" : 416,
-  "count" : 1573,
-  "uniques" : 431,
+  "count" : 1574,
+  "uniques" : 432,
   "clones" : [
     {
       "timestamp": "2022-05-24T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-06-06T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
